src/css/components/dark_mode.scss
@media (prefers-color-scheme: dark) {
  body {
    @apply bg-gray-800;
    @apply text-gray-300;
  }

  .nav {
    margin-bottom: -17px !important;
    @apply pb-2;
    @apply text-gray-200;
    @apply bg-gray-900;

    a {
      @apply text-gray-200;
    }
  }

  .card {
    @apply rounded-md;
    @apply relative;
    @apply h-full;
    @apply bg-gray-700;
    @apply text-gray-200;
    @apply p-4;

    a {
      @apply text-gray-200;
    }
  }

  .progress_bar {
    @apply bg-gray-800;
    @apply rounded;
  }

  .big_letters {
    @apply w-full;
    @apply mb-4;
    @apply text-gray-200;
    @apply p-1;
  }

  .gradient-color {
    @apply bg-gray-700;
  }

  .label {
    @apply block;
    @apply uppercase;
    @apply tracking-wide;
    @apply text-gray-200;
    @apply text-xs;
    @apply font-bold;
    @apply mt-2;
  }
}

